# ai-rs

./: Cargo.toml
ai-macros/: Cargo.toml
ai-macros/src/: lib.rs  tool.rs  tools.rs
ai-macros/tests/: compile_fail.rs  integration_test.rs  tools_macro_test.rs  validation_errors.rs
ai-macros/tests/ui/: extra_param_in_docstring.rs  extra_param_in_docstring.stderr  missing_param_description.rs  missing_param_description.stderr
examples/function-calling/: main.rs
examples/structured-generation/: main.rs
src/: core.rs  provider.rs
src/core/: builder.rs  error.rs  traits.rs  types.rs
src/model/: chat.rs
src/provider/: openai.rs
