[workspace]
members = [".", "ai-macros"]
resolver = "2"

[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
ai-macros = { path = "ai-macros" }
async-trait = "0.1.87"
bytes = "1.10.1"
futures = "0.3.31"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
schemars = "0.8.22"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"

[dev-dependencies]
dotenv = "0.15.0"

[[example]]
name = "structured-generation"
path = "examples/structured-generation/main.rs"

[[example]]
name = "function-calling"
path = "examples/function-calling/main.rs"
