[package]
name = "ai-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
darling = "0.20"
serde_json = "1.0"

[dev-dependencies]
trybuild = "1.0"
ai = { path = ".." }
tokio = { version = "1.0", features = ["macros", "rt"] }